entity type configuration Cliente

--- a/Collectio.Application/Collectio.Application.csproj
+++ b/Collectio.Application/Collectio.Application.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\Handlers\" />
+    <Folder Include="Commands\CommandsResponses\" />
     <Folder Include="Queries\Handlers\" />
   </ItemGroup>
 
