--- a/Collectio.Presentation/Collectio.Presentation.csproj
+++ b/Collectio.Presentation/Collectio.Presentation.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Collectio.Application\Collectio.Application.csproj" />
     <ProjectReference Include="..\Collectio.Infra.CrossCutting.Ioc\Collectio.Infra.CrossCutting.Ioc.csproj" />
     <ProjectReference Include="..\Collectio.Infra.CrossCutting.Services\Collectio.Infra.CrossCutting.Services.csproj" />
