--- a/Collectio.Presentation/appsettings.Development.json
+++ b/Collectio.Presentation/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=.\\SQLEXPRESS;Integrated Security=true;Database=Collectio"
   }
 }
