domain events e entity validations

--- a/Collectio.Presentation/appsettings.Development.json
+++ b/Collectio.Presentation/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=.\\SQLEXPRESS;Integrated Security=true;Database=Collectio"
+    "Default": "Data Source=.\\SQLEXPRESS;Initial Catalog=Collectio;Integrated security=true;"
   }
 }
