--- a/Collectio.Domain/Collectio.Domain.csproj
+++ b/Collectio.Domain/Collectio.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="ClienteAggregate\EventHandlers\" />
     <Folder Include="CobrancaAggregate\" />
     <Folder Include="ContaBancariaAggregate\" />
     <Folder Include="RecorrenciaAggregate\" />
