--- a/Collectio.Presentation/appsettings.Development.json
+++ b/Collectio.Presentation/appsettings.Development.json
@@ -8,5 +8,10 @@
   },
   "ConnectionStrings": {
     "Default": "Data Source=.\\SQLEXPRESS;Initial Catalog=Collectio;Integrated security=true;"
-  }
+  },
+  "IdentityServer": {
+    "Authority": "https://localhost:5001",
+    "RequireHttpsMetadata": true,
+    "ApiName": "cobranca-facil-api"
+  } 
 }
