fixes handlers and authentication

--- a/Collectio.Presentation/appsettings.Development.json
+++ b/Collectio.Presentation/appsettings.Development.json
@@ -10,8 +10,8 @@
     "Default": "Data Source=.\\SQLEXPRESS;Initial Catalog=Collectio;Integrated security=true;"
   },
   "IdentityServer": {
-    "Authority": "https://localhost:5001",
-    "RequireHttpsMetadata": true,
+    "Authority": "https://localhost:5003",
+    "RequireHttpsMetadata": false,
     "ApiName": "cobranca-facil-api"
   } 
 }
