fix env docker compose

--- a/Collectio.Presentation/appsettings.json
+++ b/Collectio.Presentation/appsettings.json
@@ -9,5 +9,8 @@
       "IncludeScopes": true
     }
   },
+  "IdentityServer": {
+    "ApiName": "cobranca-facil-api"
+  },
   "AllowedHosts": "*"
 }
