--- a/Collectio.Domain/Collectio.Domain.csproj
+++ b/Collectio.Domain/Collectio.Domain.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <Folder Include="ClienteAggregate\EventHandlers\" />
-    <Folder Include="CobrancaAggregate\Endereco\" />
+    <Folder Include="ClienteAggregate\Validators\" />
     <Folder Include="ContaBancariaAggregate\" />
     <Folder Include="RecorrenciaAggregate\" />
   </ItemGroup>
