--- a/Collectio.Domain/Collectio.Domain.csproj
+++ b/Collectio.Domain/Collectio.Domain.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -13,7 +13,6 @@
   <ItemGroup>
     <Folder Include="ClienteAggregate\Validators\" />
     <Folder Include="ContaBancariaAggregate\" />
-    <Folder Include="BoletoAggregate\" />
     <Folder Include="RecorrenciaAggregate\" />
   </ItemGroup>
 
