cliente da cobranca e unit test

--- a/Collectio.Application/Collectio.Application.csproj
+++ b/Collectio.Application/Collectio.Application.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Collectio.Infra.CrossCutting.Services\Collectio.Infra.CrossCutting.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Cobrancas\CommandValidators\" />
+  </ItemGroup>
+
 </Project>
