fixes command validators e exception com erros no command

--- a/Collectio.Infra.Data/Collectio.Infra.Data.csproj
+++ b/Collectio.Infra.Data/Collectio.Infra.Data.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Collectio.Infra.CrossCutting.Services\Collectio.Infra.CrossCutting.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
